Correct elements that were overflowing viewport on small mobile devices

--- a/src/_iran/resources/resources.scss
+++ b/src/_iran/resources/resources.scss
@@ -68,6 +68,10 @@ hr.card-horizontal {
 .info-array {
   &-media {
     margin: 20px;
+
+    > img {
+      max-width: 100%;
+    }
   }
 
   &-text {
